...
        label = "Cats list",
        selectedIcon = Icons.Filled.Person,
        unselectedIcon = Icons.Filled.Person
    ),
    BottomNavItem(
        route = NavRoutes.Favourites,
        label = "Favourites",
        selectedIcon = Icons.Filled.FavoriteBorder,
        unselectedIcon = Icons.Filled.FavoriteBorder
    )
)

@Composable
...
