...
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween
        ) {

            Column {
                Text(
                    text = "AVERAGE LIFESPAN",
                    style = MaterialTheme.typography.labelSmall,
                    color = MaterialTheme.colorScheme.outline
                )
                Spacer(modifier = Modifier.height(Dimen.Spacing.small))
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Text(
...
